--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					  	</div>
 					</div><!-- mail icon end -->
 
-					<p>wressinfo@gmail.com</p>
+					<p>wressapp@gmail.com</p>
 				</div>
 			</div><!-- ./mail -->
 		</div><!-- ./info -->
