--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div class="row middle-xs center-xs">
 				<div class="col-xs-11 col-sm-10 col-md-8 col-lg-7">
 					<div class='embed-container'>
-						<iframe src="http://www.youtube.com/embed/BLPjjAHmhSQ?modestbranding=1&controls=0&rel=0&showinfo=0&autoplay=1" frameborder="0" width="720" height="405"></iframe>
+						<iframe src="http://www.youtube.com/embed/kdTGsVS47hY?modestbranding=1&controls=0&rel=0&showinfo=0&autoplay=1" frameborder="0" width="720" height="405"></iframe>
 					</div>
 				</div>
 			</div>
